--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -43,7 +43,7 @@
 
 \lstdefinestyle{myScalastyle}{
   frame=tb,
-  language=scala,
+  language=C,
   aboveskip=3mm,
   belowskip=3mm,
   showstringspaces=false,
@@ -96,6 +96,9 @@
 \begin{document}
 
 \maketitle % Print the title
+\input{./ex1}
+\input{./ex2}
+\input{./ex3}
 
 %------------------------------------------------
 \end{document}
