--- a/hw1/ex1.tex
+++ b/hw1/ex1.tex
@@ -1,3 +1,13 @@
 \section*{Exercise A}
 
 \paragraph{a.}
+In the scenario that we have two processes in the critical section, 
+the condition in line 4 must be true.
+
+For example: state[1] != group and state[2] != group
+
+But the group changes when a process gets out from the critical
+section.
+
+\paragraph{b.}
+
