--- a/hw1/ex1.tex
+++ b/hw1/ex1.tex
@@ -31,7 +31,7 @@ process in the loop.
 \paragraph{2.}
 Solution for the first part of the exercise:
 
-\begin{lstlisting}
+\begin{lstlisting}[style=mycode]
 
 shared variables
 int array[c], next_ticket, now_serving, my_desk_id, current_ticket, counter;
@@ -83,7 +83,7 @@ exit_cs()
 \paragraph{2.}
 Solution for the second part of the exercise:
 
-\begin{lstlisting}
+\begin{lstlisting}[style=mycode]
 entry_section()
 {
 	while (worker[my_ticket % w].lock == 1);
