--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -41,7 +41,7 @@
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
-\lstdefinestyle{myScalastyle}{
+\lstdefinestyle{mycode} {
   frame=tb,
   language=C,
   aboveskip=3mm,
@@ -49,7 +49,7 @@
   showstringspaces=false,
   columns=flexible,
   basicstyle={\small\ttfamily},
-  numbers=none,
+  numbers=left,
   numberstyle=\tiny\color{gray},
   keywordstyle=\color{blue},
   commentstyle=\color{dkgreen},
@@ -57,8 +57,9 @@
   frame=single,
   breaklines=true,
   breakatwhitespace=true,
-  tabsize=3,
+  tabsize=1,
 }
+
 \pagestyle{fancyplain} % Makes all pages in the document conform to the custom headers and footers
 \fancyhead{} % No page header - if you want one, create it in the same way as the footers below
 \fancyfoot[L]{} % Empty left footer
