--- a/hw1/ex4.tex
+++ b/hw1/ex4.tex
@@ -1,4 +1,4 @@
-\section*{Exercise C}
+\section*{Exercise 7C}
 
 \begin{lstlisting}[style=mycode]
 
@@ -486,8 +486,7 @@ and then I delete this key. As a result we will have a null tree
 again.
 Liniarization points in Insertion: line 69 or line 88 where the new
 element is already inserted in the tree.
-Liniarization points in Deletion: after free operation when the nodes
-are going to be unlocked.
+Liniarization points in Deletion: line xx or line xx.
 
 \paragraph{4.}
 The algorithm is correct because for each node that we traverse we
@@ -496,10 +495,6 @@ locked during insertion and deletion operation we ensure that we are
 going to perform correctly each one operation.
 
 \paragraph{5.}
-The algorithm is deadlock free because we lock only the current node
-and its parent and child. So, all the threads can lock a node. Also by
-locking individual nodes our threads can do progress in different
-parts of the tree.
 
 
 \paragraph{6.}
